--- a/config.yaml
+++ b/config.yaml
@@ -1,16 +1,12 @@
-credentials:
+crcredentials:
   usernames:
     eraldo:
       email: eraldo@example.com
       name: Eraldo
-      password: '$2b$12$uON60sh.2IdIk4cka2YILuRo4kQai.pU8McK/owmmJ.QawK85GrdK'  # senha: 1234
+      password: '$2b$12$uON60sh.2IdIk4cka2YILuRo4kQai.pU8McK/owmmJ.QawK85GrdK'
       role: admin
 
 cookie:
   expiry_days: 30
   key: 'minha_chave_secreta'
   name: 'financeiro_cookie'
-
-preauthorized:
-  emails:
-    - eraldo@example.com
