--- a/config.yaml
+++ b/config.yaml
@@ -1,12 +1,15 @@
 credentials:
   usernames:
     eraldo:
-      email: eraldo@example.com
+      email: eraldo@email.com
       name: Eraldo
-      password: '$2b$12$uON60sh.2IdIk4cka2YILuRo4kQai.pU8McK/owmmJ.QawK85GrdK'
-      role: admin
+      password: '$2b$12$KIXQhZz1Ykz0ZQ1xZQ1xZ.Q1xZQ1xZQ1xZQ1xZQ1xZQ1xZQ1xZQ1xZ'  # senha criptografada
 
 cookie:
+  name: nome_cookie
+  key: chave_secreta_aleatoria
   expiry_days: 30
-  key: 'minha_chave_secreta'
-  name: 'financeiro_cookie'
+
+preauthorized:
+  emails:
+    - eraldo@email.com
