--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ xlsxwriter
 matplotlib
 numpy
 SpeechRecognition
-streamlit-gsheets-connection
+st-gsheets-connection
 validators==0.21.1
 st-gsheets-connection
 
